# ChangeLog for app-text/kbibtex
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/kbibtex/ChangeLog,v 1.38 2011/03/05 15:41:27 dilfridge Exp $

*kbibtex-0.3_beta1 (05 Mar 2011)

  05 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kbibtex-0.3_beta1.ebuild, -kbibtex-0.3.0_pre20110102.ebuild:
  Bumped to beta version, no need for snapshots anymore

  29 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kbibtex-0.3.0_pre20100222.ebuild, kbibtex-0.3.0_pre20110102.ebuild:
  Remove old; bump EAPI

*kbibtex-0.3.0_pre20110102 (02 Jan 2011)

  02 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kbibtex-0.3.0_pre20110102.ebuild:
  Added new snapshot which fixes bug 345801

*kbibtex-0.3.0_pre20100222 (22 Feb 2010)

  22 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbibtex-0.3.0_pre20100222.ebuild:
  Revision bump.

*kbibtex-0.3.0_pre20100211 (11 Feb 2010)

  11 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbibtex-0.3.0_pre20100211.ebuild:
  Revision bump.

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  kbibtex-0.3.0_pre20100113.ebuild:
  Missing dev-tex/bibtex2html rdepend wrt #304433, thanks to Richard Foltyn
  for reporting.

*kbibtex-0.3.0_pre20100113 (13 Jan 2010)

  13 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbibtex-0.3.0_pre20100113.ebuild:
  Revision bump.

*kbibtex-0.3.0_pre20100109 (05 Jan 2010)

  05 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  +kbibtex-0.3.0_pre20100109.ebuild:
  Revision bump.

*kbibtex-0.3.0_pre20091225 (25 Dec 2009)

  25 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kbibtex-0.3.0_pre20091225.ebuild:
  Initial commit wrt #294919, thanks to David Raison for reporting.
