@@ -1,24 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST kbibtex-0.3-beta1.tar.bz2 146883 RMD160 4226aa0ec95123600f76ddef3ebfbc45efaa9066 SHA1 76218bb58e6c8d03376a6daf85762330f93dcc30 SHA256 e63611ef3679bd12919f81d7c513ea39ece5397638c8007c9bed424894a6ed57
-EBUILD kbibtex-0.3_beta1.ebuild 648 RMD160 6b17c00da3f8916bc9384e074f25c56bd32d2045 SHA1 ff7a7f3f934d6624d1f08859c2533db171f50167 SHA256 0df003f4fcf15b91213ea7e9a3d6553f8919d78d37f6730c81390c7e0e70216d
-MISC ChangeLog 1745 RMD160 e39197d18ddd604d2d99277b23d521881b2cd68a SHA1 325098ac9fa345c9d740b70dc001b5e4986ba0ca SHA256 ae574a44394d7ef14b517e54e2c8bc98d52af185640e587866e5bba32160d747
+DIST kbibtex-0.3.tar.bz2 149749 RMD160 240e593952ed53b8956299c33b024022bafab66a SHA1 7386092298f6b6ba91621b58a8f6bc814d78bd21 SHA256 49be659c09c46afeea4851a20ae7ea89a838240f3a76d21634cb266301ddd2ed
+EBUILD kbibtex-0.3.ebuild 658 RMD160 451a100b3af564c3d3d47fba9f7acc9b2fe9500b SHA1 09ff690f1dd7517cb0b43a6e50df7f04d8a3e623 SHA256 44cd14780f68b506f2661ce33ce0bbc192e30ef98b60e24a01e7c494de26684e
+MISC ChangeLog 1907 RMD160 354abf00f32433f8d6934a8b25d261a12852033a SHA1 bede67c5051fd74e2121047d281ddcd36913cf0d SHA256 07d3a986fa9de3bcfcd7350ee356b70504e23fd7a34beabfe70d9a5fdf87328c
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJNcloIAAoJENwGBM22xffegdcP+wcPqVT4mQB4xB0bpnijsuJz
-Ir5TURUuMmgnA9krXrjCO6iQPtvDFGMLJINBcE7IJFtY/WeRE+dFGw6JcPoHxzVV
-fGrp3DwBbQl5OEP3niV8xgs/H/+alXQOZxYo8Ua68JySzTdjKJuvFFOF9HvXmZHV
-otBzwuOeV1HCB1KiZz95BxBkDyXHASiROwalQE6ePBuynl8hQRzVSfoIQ+qvuJ9T
-Kv470qZ54hK+/4fpB+cBc7NLnCk4tmjM2AUMNlrdsuxxQl9p8zrK2eQ7R95Q1zSz
-Bo7Qf6XWxNgmf7jHdel0ZRfknoXPiFhTKquH0REwZzDrrtzafMLraeol3GLPz+2i
-zqml0fHgpzSD3Zipz3OvupYuFDD51OB1O9ze8+s7GY6fw4MFfjSf8EzCyfsV9R51
-dUNAfRMMqCiLhfR2OICGmmVsa/kogiujZoHVO5TJrL3lV7AN02wH02hItL7NabG9
-HtpzGCIf76pYetb0XhgtdN4YFeul3k7GqIhoAh1PixPIDBDfLrffHrQKFZf4ckSk
-uweGeVpTvMCsvj26+Gq5IVXpF+zsp8hymy6mZlVU1FLIQofbGdOHAqu9RGbyf3gq
-PpzQ+4whIoImYmv8fyKhPoKHEM96/qhrTviDGmguCquwuEQT1LuV0l9ljQ9X/xHf
-6o8jYtVrKZ5Kdbim0MvZ
-=111q
+iEYEARECAAYFAk3nt5kACgkQHB6c3gNBRYch8wCgl08m5dd2yCUEn1na0zPoVhv8
+iVsAoLP3DbUu7EaP7VcrIfhuYK3GlKs1
+=Bwur
 -----END PGP SIGNATURE-----
