@@ -1,6 +1,12 @@
 # ChangeLog for app-text/kbibtex
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/kbibtex/ChangeLog,v 1.38 2011/03/05 15:41:27 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/kbibtex/ChangeLog,v 1.39 2011/06/02 16:18:21 scarabeus Exp $
+
+*kbibtex-0.3 (02 Jun 2011)
+
+  02 Jun 2011; Tomáš Chvátal <scarabeus@gentoo.org>
+  -kbibtex-0.3_beta1.ebuild, +kbibtex-0.3.ebuild:
+  Update to 0.3. Drop beta.
 
 *kbibtex-0.3_beta1 (05 Mar 2011)
 
